# rsync

./: CMakeLists.txt  cleanup.c  clientserver.c  compat.c  config.h.cmake.in  fork.c  git-version.h  io.c  loadparm.c  main.c  options.c  pipe.c  proto.h  rounding.c  rsync.h  socket.c  syscall.c  util.c
cmake/: toolchain-gcc.cmake  ucm.cmake
lib/: compat.c  getaddrinfo.c  getpass.c  inet_ntop.c  inet_pton.c  pipe.c  pool_alloc.c  socketpair.c
libw32/: alarm.c  alloca.h  dirent.h  getopt.h  grp.h  langinfo.h  libgen.h  netdb.h  package.h.in  poll.h  pwd.h  syslog.c  termemu_vio.h  unistd.h  w32_check.c  w32_child.c  w32_chown.c  w32_close.c  w32_corecrt.h  w32_dir.c  w32_dirent.c  w32_errno.c  w32_fcntl.c  w32_fsync.c  w32_getcwd.c  w32_gethostname.c  w32_getlocale.c  w32_getopt.c  w32_getsubopt.c  w32_gistrerror.c  w32_grp.c  w32_iconv.c  w32_iconv_native.c  w32_ino.c  w32_io.c  w32_langinfo.c  w32_link.c  w32_mknod.c  w32_mkstemp.c  w32_mmap.c  (+41 more)
libw32/arpa/: ftp.h  telnet.h
libw32/msvc/: utime.h
libw32/msys2-runtime/: winsup.h
libw32/netinet/: in.h  tcp.h
libw32/sys/: __types.h  _default_fcntl.h  _stdint.h  _types.h  cdefs.h  ioctl.h  mman.h  mount.h  param.h  poll.h  select.h  signal.h  socket.h  statfs.h  statvfs.h  syslog.h  termios.h  time.h  types.h  uio.h  utsname.h  utypes.h  vfs.h  wait.h
popt/: findme.c  popt.c  poptconfig.c
zlib-ng/: CMakeLists.txt  deflate.c  zbuild.h
